# partsbox_mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  ClaudeDesktopConfig.md  Dockerfile  README.md  UsingMCPServer.md  claude_desktop_config.json.example  design.md  docker-compose.devcontainer.yml  docker-compose.yml  dump_mcp_tools.py  partsbox_mcp_server.py  pyproject.toml
.claude/commands/: build.md  commitpush.md
.devcontainer/: devcontainer.json
docs/: FASTMCP_REFERENCE.md  FASTMCP_SDK_REFERENCE.md  MCP_BEST_PRACTICES.md
src/partsbox_mcp/: __init__.py  client.py  server.py  types.py
src/partsbox_mcp/api/: __init__.py  files.py  lots.py  orders.py  parts.py  projects.py  stock.py  storage.py
src/partsbox_mcp/utils/: __init__.py  jmespath_extensions.py
tests/: __init__.py  conftest.py  fake_partsbox.py  test_files_api.py  test_jmespath_extensions.py  test_lots_api.py  test_orders_api.py  test_orders_api_new.py  test_parts_api.py  test_parts_api_new.py  test_projects_api.py  test_stock_api.py  test_storage_api.py  test_storage_api_new.py  test_types.py  validate_api_format.py
